# Expensir

./: .env.example  .gitignore  ARCHITECTURE-v2.md  CLAUDE.md  CONTEXT.md  Dockerfile  LICENSE  README.md  alembic.ini  handoff-logging.md  handoff-no-silent-replies.md  pyproject.toml
.claude/workflows/: adversarial-review.js
docs/adr/: 0001-split-home-and-logging-currency.md  0002-settlements-are-ungated-stated-facts.md  0003-per-group-advisory-lock-for-writes.md  0004-active-ledger-invariant-maintenance.md  0005-export-import-modes-and-identity-reconciliation.md  0006-board-settle-button-wysiwyg-with-amount-token.md  0007-settle-up-is-a-per-line-sheet.md  0008-minor-unit-money-and-rotating-tiebreak.md  0009-currency-codes-validate-at-every-input-edge.md  (+6 more)
expensir/: __main__.py  config.py  logsetup.py
migrations/: env.py
scripts/: record_llm_fixtures.py
tests/: conftest.py  factories.py  fakes.py  test_allocate.py  test_balance.py  test_board.py  test_commands.py  test_config.py  test_currency.py  test_currency_validation.py  test_delete_edit.py  test_equal.py  test_executor.py  test_expense_match.py  test_fx.py  test_fx_client.py  test_help.py  test_homecurrency.py  test_ledgers.py  test_llm_client.py  test_locking.py  test_logging.py  test_members.py  test_migrations.py  test_money.py  test_nl.py  test_onboarding.py  test_picklist.py  test_poll.py  test_refine.py  test_registration.py  test_replay.py  test_settle.py  test_settle_sheet.py  test_setup.py  test_simplify.py  test_split_types.py  test_start.py  test_telegram_client.py  test_transactions.py  (+3 more)
(+52 files in other folders)
